tests/types/errors/import_missing_export.mog
const { Missing } = @import("../../modules/math.mog")

print(Missing)
